syntax="proto3";

option go_package = "/pb";

service BrokerService {
    rpc GetSoldiers(GetSoldiersServiceReq) returns (GetSoldiersServiceRes) {}
    rpc GetServer(GetServerServiceReq) returns (GetServerServiceRes) {}
}

service InformerService {
    rpc AddBase(AddBaseServiceReq) returns (ConnectServiceRes) {}
    rpc RenameBase(RenameBaseServiceReq) returns (ConnectServiceRes) {}
    rpc UpdateValue(UpdateValueServiceReq) returns (ConnectServiceRes) {}
    rpc DeleteBase(DeleteBaseServiceReq) returns (ConnectServiceRes) {}
}

service ServidorService {
    rpc AskServer(AskServerServiceReq) returns (AskServerServiceRes) {}
}

service LogService {
    rpc SendLogs (LogRequest) returns (LogResponse) {}
}

message LogRequest {
    string serverID = 1;
}

message LogResponse {
    repeated string logs = 1;
}

message GetSoldiersServiceReq {
    string id = 1;
    string sector = 2;
    string base = 3;
}

message GetSoldiersServiceRes {
    string id = 1;
    int64 valor = 2;
    repeated int64 clock = 3;
}

message GetServerServiceReq {
    string id = 1;
}

message GetServerServiceRes {
    string id = 1;
}

message AddBaseServiceReq {
    string id = 1;
    string sector = 2;
    string base = 3;
    int64 valor = 4;
}

message RenameBaseServiceReq {
    string id = 1;
    string sector = 2;
    string base = 3;
    string name = 4;
}

message UpdateValueServiceReq {
    string id = 1;
    string sector = 2;
    string base = 3;
    int64 valor = 4;
}

message DeleteBaseServiceReq {
    string id = 1;
    string sector = 2;
    string base = 3;
}

message ConnectServiceRes {
    string id = 1;
    repeated int64 clock = 2;
}

message AskServerServiceReq {
    string id = 1;
    string sector = 2;
    string base = 3;
}

message AskServerServiceRes {
    string id = 1;
    int64 valor = 2;
    repeated int64 clock = 3;
}